tests/invalids/invalidWhile1.gt
proc main ()
    int m;
begin
    while n > 1  
        m := n;
    od
end
